PyQuest/src/test/parsing/valid/test003.ql
// Form with question of type decimal
form label {
  "Question?"
    var: decimal
}