PyQuest/src/test/parsing/invalid/test005.ql
// Question label without quotation marks
form label {
    question
    var : cows
}